--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -10,7 +10,7 @@ $dream-font: "Lexend", serif;
 // Font Sizes
 $font-xsm: 0.875rem;
 $font-sm: 1rem;
-$font-md: 1.3125rem;
+$font-md: 1.5rem;
 $font-lg: 2.25rem;
 $font-xl: 3rem;
 $font-xxl: 3.75rem;
@@ -22,3 +22,11 @@ $font-weight-reg: 400;
 $font-weight-semi-bold: 600;
 $font-weight-bold: 700;
 $font-weight-extra-bold: 900;
+
+// Paddings
+$padding-xsm: 0.25em;
+$padding-sm: 0.5em;
+$padding-md: 1em;
+$padding-lg: 1.5em;
+$padding-xl: 2em;
+$padding-xxl: 2.5em;
