Adds spacing classes

--- a/css/style.css
+++ b/css/style.css
@@ -111,13 +111,419 @@ h3 {
 }
 
 h4 {
-  font-size: 1.3125rem;
+  font-size: 1.5rem;
   font-weight: 600;
 }
 
 p {
   font-size: 1rem;
   font-weight: 400;
+}
+
+/* Padding all around */
+.dr-p-0 {
+  padding: 0;
+}
+
+.dr-p-1 {
+  padding: 0.25rem;
+}
+
+.dr-p-2 {
+  padding: 0.5rem;
+}
+
+.dr-p-3 {
+  padding: 1rem;
+}
+
+.dr-p-4 {
+  padding: 1.5rem;
+}
+
+.dr-p-5 {
+  padding: 2rem;
+}
+
+.dr-p-6 {
+  padding: 2.5rem;
+}
+
+/* Padding on x-axis */
+.dr-px-0 {
+  padding: 0;
+}
+
+.dr-px-1 {
+  padding: 0 0.25rem;
+}
+
+.dr-px-2 {
+  padding: 0 0.5rem;
+}
+
+.dr-px-3 {
+  padding: 0 1rem;
+}
+
+.dr-px-4 {
+  padding: 0 1.5rem;
+}
+
+.dr-px-5 {
+  padding: 0 2rem;
+}
+
+.dr-px-6 {
+  padding: 0 2.5rem;
+}
+
+/* Padding on y-axis */
+.dr-py-0 {
+  padding: 0;
+}
+
+.dr-py-1 {
+  padding: 0.25rem 0;
+}
+
+.dr-py-2 {
+  padding: 0.5rem 0;
+}
+
+.dr-py-3 {
+  padding: 1rem 0;
+}
+
+.dr-py-4 {
+  padding: 1.5rem 0;
+}
+
+.dr-py-5 {
+  padding: 2rem 0;
+}
+
+.dr-py-6 {
+  padding: 2.5rem 0;
+}
+
+/* Padding on left side */
+.dr-pl-0 {
+  padding-left: 0;
+}
+
+.dr-pl-1 {
+  padding-left: 0.25rem;
+}
+
+.dr-pl-2 {
+  padding-left: 0.5rem;
+}
+
+.dr-pl-3 {
+  padding-left: 1rem;
+}
+
+.dr-pl-4 {
+  padding-left: 1.5rem;
+}
+
+.dr-pl-5 {
+  padding-left: 2rem;
+}
+
+.dr-pl-6 {
+  padding-left: 2.5rem;
+}
+
+/* Padding on right side */
+.dr-pr-0 {
+  padding-right: 0;
+}
+
+.dr-pr-1 {
+  padding-right: 0.25rem;
+}
+
+.dr-pr-2 {
+  padding-right: 0.5rem;
+}
+
+.dr-pr-3 {
+  padding-right: 1rem;
+}
+
+.dr-pr-4 {
+  padding-right: 1.5rem;
+}
+
+.dr-pr-5 {
+  padding-right: 2rem;
+}
+
+.dr-pr-6 {
+  padding-right: 2.5rem;
+}
+
+/* Padding on top */
+.dr-pt-0 {
+  padding-top: 0;
+}
+
+.dr-pt-1 {
+  padding-top: 0.25rem;
+}
+
+.dr-pt-2 {
+  padding-top: 0.5rem;
+}
+
+.dr-pt-3 {
+  padding-top: 1rem;
+}
+
+.dr-pt-4 {
+  padding-top: 1.5rem;
+}
+
+.dr-pt-5 {
+  padding-top: 2rem;
+}
+
+.dr-pt-6 {
+  padding-top: 2.5rem;
+}
+
+/* Padding on bottom */
+.dr-pb-0 {
+  padding-bottom: 0;
+}
+
+.dr-pb-1 {
+  padding-bottom: 0.25rem;
+}
+
+.dr-pb-2 {
+  padding-bottom: 0.5rem;
+}
+
+.dr-pb-3 {
+  padding-bottom: 1rem;
+}
+
+.dr-pb-4 {
+  padding-bottom: 1.5rem;
+}
+
+.dr-pb-5 {
+  padding-bottom: 2rem;
+}
+
+.dr-pb-6 {
+  padding-bottom: 2.5rem;
+}
+
+/* Margin all around */
+.dr-m-0 {
+  margin: 0;
+}
+
+.dr-m-1 {
+  margin: 0.25rem;
+}
+
+.dr-m-2 {
+  margin: 0.5rem;
+}
+
+.dr-m-3 {
+  margin: 1rem;
+}
+
+.dr-m-4 {
+  margin: 1.5rem;
+}
+
+.dr-m-5 {
+  margin: 2rem;
+}
+
+.dr-m-6 {
+  margin: 2.5rem;
+}
+
+/* Margin on x-axis */
+.dr-mx-0 {
+  margin: 0;
+}
+
+.dr-mx-1 {
+  margin: 0 0.25rem;
+}
+
+.dr-mx-2 {
+  margin: 0 0.5rem;
+}
+
+.dr-mx-3 {
+  margin: 0 1rem;
+}
+
+.dr-mx-4 {
+  margin: 0 1.5rem;
+}
+
+.dr-mx-5 {
+  margin: 0 2rem;
+}
+
+.dr-mx-6 {
+  margin: 0 2.5rem;
+}
+
+/* Margin on y-axis */
+.dr-my-0 {
+  margin: 0;
+}
+
+.dr-my-1 {
+  margin: 0.25rem 0;
+}
+
+.dr-my-2 {
+  margin: 0.5rem 0;
+}
+
+.dr-my-3 {
+  margin: 1rem 0;
+}
+
+.dr-my-4 {
+  margin: 1.5rem 0;
+}
+
+.dr-my-5 {
+  margin: 2rem 0;
+}
+
+.dr-my-6 {
+  margin: 2.5rem 0;
+}
+
+/* Margin on left side */
+.dr-ml-0 {
+  margin-left: 0;
+}
+
+.dr-ml-1 {
+  margin-left: 0.25rem;
+}
+
+.dr-ml-2 {
+  margin-left: 0.5rem;
+}
+
+.dr-ml-3 {
+  margin-left: 1rem;
+}
+
+.dr-ml-4 {
+  margin-left: 1.5rem;
+}
+
+.dr-ml-5 {
+  margin-left: 2rem;
+}
+
+.dr-ml-6 {
+  margin-left: 2.5rem;
+}
+
+/* Margin on right side */
+.dr-mr-0 {
+  margin-right: 0;
+}
+
+.dr-mr-1 {
+  margin-right: 0.25rem;
+}
+
+.dr-mr-2 {
+  margin-right: 0.5rem;
+}
+
+.dr-mr-3 {
+  margin-right: 1rem;
+}
+
+.dr-mr-4 {
+  margin-right: 1.5rem;
+}
+
+.dr-mr-5 {
+  margin-right: 2rem;
+}
+
+.dr-mr-6 {
+  margin-bottom: 2.5rem;
+}
+
+/* Margin on top */
+.dr-mt-0 {
+  margin-top: 0;
+}
+
+.dr-mt-1 {
+  margin-top: 0.25rem;
+}
+
+.dr-mt-2 {
+  margin-top: 0.5rem;
+}
+
+.dr-mt-3 {
+  margin-top: 1rem;
+}
+
+.dr-mt-4 {
+  margin-top: 1.5rem;
+}
+
+.dr-mt-5 {
+  margin-top: 2rem;
+}
+
+.dr-mt-6 {
+  margin-top: 2.5rem;
+}
+
+/* Mmargin on bottom */
+.dr-mb-0 {
+  margin-bottom: 0;
+}
+
+.dr-mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.dr-mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.dr-mb-3 {
+  margin-bottom: 1rem;
+}
+
+.dr-mb-4 {
+  margin-bottom: 1.5rem;
+}
+
+.dr-mb-5 {
+  margin-bottom: 2rem;
+}
+
+.dr-mb-6 {
+  margin-bottom: 2.5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
