--- a/src/_base.scss
+++ b/src/_base.scss
@@ -1,4 +1,11 @@
 @use "variables";
 
 // Lists
+ul {
+    list-style-type: disc;
+    padding: variables.$padding-md;
+}
 
+ol {
+    list-style-type: disc;
+}
