--- a/src/_typography.scss
+++ b/src/_typography.scss
@@ -1,26 +1,22 @@
 @use "dream-body-font";
 @use "variables";
 
-// Set base font
+// Sets base fonts
 body {
     font-family: variables.$dream-font;
 }
-
 h1 {
     font-size: variables.$font-xxl;
     font-weight: variables.$font-weight-bold;
 }
-
 h2 {
     font-size: variables.$font-xl;
     font-weight: variables.$font-weight-bold;
 }
-
 h3 {
     font-size: variables.$font-lg;
     font-weight: variables.$font-weight-semi-bold;
 }
-
 h4 {
     font-size: variables.$font-md;
     font-weight: variables.$font-weight-semi-bold;
@@ -29,4 +25,24 @@ h4 {
 p {
     font-size: variables.$font-sm;
     font-weight: variables.$font-weight-reg;
+}
+
+// Font weight classes
+.dr-text-xsm {
+    font-weight: variables.$font-weight-extra-light;
+}
+.dr-text-sm {
+    font-weight: variables.$font-weight-light;
+}
+.dr-text-rg {
+    font-weight: variables.$font-weight-reg;
+}
+.dr-text-sb {
+    font-weight: variables.$font-weight-semi-bold;
+}
+.dr-text-b {
+    font-weight: variables.$font-weight-bold;
+}
+.dr-text-xb {
+    font-weight: variables.$font-weight-extra-bold;
 }
