--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -34,3 +34,6 @@ $margin-md: 1rem;
 $margin-lg: 1.5rem;
 $margin-xl: 2rem;
 $margin-xxl: 2.5rem;
+
+// Breakpoints
+$breakpoints: ("xsm": 36rem, "sm": 48rem, "md": 62rem, "lg": 75rem, "xl": 87.5rem, "xxl": 100rem)
