--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,38 +2,57 @@
 $dream-font: "Lexend", serif;
 
 // Font Sizes
-$font-xsm: 0.875rem;
-$font-sm: 1rem;
-$font-md: 1.5rem;
-$font-lg: 2.25rem;
-$font-xl: 3rem;
-$font-xxl: 3.75rem;
-
-// Heading sizes
+$font-sizes: (
+    "xsm": 0.875rem,
+    "sm": 1rem,
+    "md": 1.5rem,
+    "lg": 2.25rem,
+    "xl": 3rem,
+    "xxl": 3.75rem
+);
 
 // Font Weights
-$font-weight-extra-light: 100;
-$font-weight-light: 200;
-$font-weight-reg: 400;
-$font-weight-semi-bold: 600;
-$font-weight-bold: 700;
-$font-weight-extra-bold: 900;
+$font-weights: (
+    "xl": 100,
+    "l": 200,
+    "r": 400,
+    "sb": 600,
+    "b": 700,
+    "xb": 900
+);
 
 // Paddings
-$padding-xsm: 0.25rem;
-$padding-sm: 0.5rem;
-$padding-md: 1rem;
-$padding-lg: 1.5rem;
-$padding-xl: 2rem;
-$padding-xxl: 2.5rem;
+$padding-sizes: (
+    "n": 0,
+    "xsm": 0.25rem,
+    "sm": 0.5rem,
+    "md": 1rem,
+    "lg": 1.5rem,
+    "xl": 2rem,
+    "pxxl": 2.5rem
+);
 
 // Margins
-$margin-xsm: 0.25rem;
-$margin-sm: 0.5rem;
-$margin-md: 1rem;
-$margin-lg: 1.5rem;
-$margin-xl: 2rem;
-$margin-xxl: 2.5rem;
+$margin-sizes: (
+    "n": 0,
+    "xsm": 0.25rem,
+    "sm": 0.5rem,
+    "md": 1rem,
+    "lg": 1.5rem,
+    "xl": 2rem,
+    "xxl": 2.5rem
+);
+
+// Gaps
+$gaps: (
+    "n": 0,
+    "xsm": 0.25rem,
+    "sm": 0.5rem,
+    "md": 1rem,
+    "lg": 1.5rem,
+    "xl": 2rem,
+    "xxl": 2.5rem
+);
 
 // Breakpoints
 $breakpoints: (
