--- a/css/style.css
+++ b/css/style.css
@@ -93,12 +93,17 @@ meter {
 ***/
 ul {
   list-style-type: disc;
-  padding-left: 1rem;
-  margin: 1rem;
+  list-style-position: inside;
 }
 
 ol {
-  list-style-type: disc;
+  list-style-type: decimal;
+  list-style-position: inside;
+}
+
+ul, ol {
+  padding-left: 1rem;
+  margin: 1rem;
 }
 
 body {
@@ -621,6 +626,35 @@ p {
 
 .dr-flex-column-r {
   flex-direction: column-reverse;
+}
+
+/* Justify Content */
+.dr-justify-content-start {
+  justify-content: start;
+}
+
+.dr-justify-content-center {
+  justify-content: center;
+}
+
+.dr-justify-content-end {
+  justify-content: end;
+}
+
+.dr-justify-content-start {
+  justify-content: start;
+}
+
+.dr-justify-content-between {
+  justify-content: space-between;
+}
+
+.dr-justify-content-evenly {
+  justify-content: space-evenly;
+}
+
+.dr-justify-content-around {
+  justify-content: space-around;
 }
 
 .dr-g-n {
