--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -63,3 +63,15 @@ $breakpoints: (
     "xl": 87.5rem, 
     "xxl": 100rem
 );
+
+// Rounded Corners
+$rounded-corners: (
+    "n": 0,
+    "xsm": 0.25rem,
+    "sm": 0.5rem,
+    "md": 1rem,
+    "lg": 1.5rem,
+    "xl": 2rem,
+    "xxl": 2.5rem,
+    "f": 100%
+);
