--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,72 @@ p {
   font-weight: 900;
 }
 
+.dr-fs-xsm {
+  font-size: 0.875rem;
+}
+
+.dr-fs-sm {
+  font-size: 1rem;
+}
+
+.dr-fs-md {
+  font-size: 1.5rem;
+}
+
+.dr-fs-lg {
+  font-size: 2.25rem;
+}
+
+.dr-fs-xl {
+  font-size: 3rem;
+}
+
+.dr-fs-xxl {
+  font-size: 3.75rem;
+}
+
+@keyframes float {
+  0% {
+    scale: 100%;
+  }
+  50% {
+    scale: 120%;
+  }
+  100% {
+    scale: 110%;
+  }
+}
+@keyframes v-float {
+  0% {
+    bottom: 0px;
+  }
+  50% {
+    bottom: 30px;
+  }
+  100% {
+    bottom: 0px;
+  }
+}
+@keyframes popout {
+  0% {
+    opacity: 0%;
+    translate: 0px, -100px;
+  }
+  100% {
+    opacity: 100%;
+    translate: 0px, 0px;
+  }
+}
+@keyframes scalein {
+  0% {
+    opacity: 0%;
+    scale: 1%;
+  }
+  100% {
+    opacity: 100%;
+    scale: 100%;
+  }
+}
 /* Padding all around */
 .dr-p-n {
   padding: 0;
@@ -575,6 +641,38 @@ p {
   margin-bottom: 2.5rem;
 }
 
+.dr-br-n {
+  border-radius: 0;
+}
+
+.dr-br-xsm {
+  border-radius: 0.25rem;
+}
+
+.dr-br-sm {
+  border-radius: 0.5rem;
+}
+
+.dr-br-md {
+  border-radius: 1rem;
+}
+
+.dr-br-lg {
+  border-radius: 1.5rem;
+}
+
+.dr-br-xl {
+  border-radius: 2rem;
+}
+
+.dr-br-xxl {
+  border-radius: 2.5rem;
+}
+
+.dr-br-f {
+  border-radius: 100%;
+}
+
 /* Containers */
 .dr-container-xsm {
   max-width: 36rem;
@@ -655,6 +753,23 @@ p {
 
 .dr-justify-content-around {
   justify-content: space-around;
+}
+
+/* Align Items */
+.dr-align-items-start {
+  align-items: start;
+}
+
+.dr-align-items-end {
+  align-items: end;
+}
+
+.dr-align-items-center {
+  align-items: center;
+}
+
+.dr-align-items-start {
+  align-items: stretch;
 }
 
 .dr-g-n {
