--- a/src/_animations.scss
+++ b/src/_animations.scss
@@ -1,12 +1,12 @@
-//
 @use "variables";
+
 @keyframes float {
     0%{scale: 100%;}
     50%{scale: 120%;}
     100%{scale: 110%;}
 }
 //float for hover
-@keyframes vfloat {
+@keyframes v-float {
     0%{bottom: 0px;}
     50%{bottom: 30px;}
     100%{bottom: 0px;}
