--- a/src/_typography.scss
+++ b/src/_typography.scss
@@ -41,3 +41,10 @@ p {
         font-weight: $weight;
     }
 } 
+
+// Font size classes
+@each $size, $fs in variables.$font-sizes {
+    .dr-fs-#{$size} {
+        font-size: $fs;
+    }
+}
