Begins styling buttons

--- a/css/style.css
+++ b/css/style.css
@@ -101,9 +101,18 @@ ol {
   list-style-position: inside;
 }
 
-ul, ol {
+dl > dt {
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+
+dl > dd {
+  margin-left: 1.5rem;
+}
+
+ul, ol, dl {
   padding-left: 1rem;
-  margin: 1rem;
+  margin: 0.5rem;
 }
 
 body {
