--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,74 @@ p {
   font-weight: 900;
 }
 
+@keyframes float {
+  0% {
+    scale: 100%;
+  }
+  50% {
+    scale: 120%;
+  }
+  100% {
+    scale: 110%;
+  }
+}
+@keyframes vfloat {
+  0% {
+    bottom: 0px;
+  }
+  50% {
+    bottom: 30px;
+  }
+  100% {
+    bottom: 0px;
+  }
+}
+@keyframes popout {
+  0% {
+    opacity: 0%;
+    translate: 0px 100px;
+  }
+  100% {
+    opacity: 100%;
+    translate: 0px 0px;
+  }
+}
+@keyframes scalein {
+  0% {
+    opacity: 0%;
+    scale: 1%;
+  }
+  100% {
+    opacity: 100%;
+    scale: 100%;
+  }
+}
+.dr-float:hover {
+  scale: 120%;
+  transition: 0.4s cubic-bezier(1, 2, 0, 1);
+}
+
+.dr-v-float:hover {
+  transition: 0.2s cubic-bezier(1, 2, 0, 1);
+  translate: 0 -5px;
+}
+
+main {
+  animation: popout 0.5s ease-out;
+}
+
+.dr-popout {
+  animation: popout 0.5s ease-out;
+}
+
+.dr-scalein {
+  animation: scalein 0.3s ease-in-out;
+}
+
+button {
+  transition: 0.3s ease-in;
+}
+
 /* Padding all around */
 .dr-p-n {
   padding: 0;
